recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: not found: value snowside
  return snowside((levels,length))
         ^